<resources>
    <string name="app_name">Football League</string>

    <string name="LaLiga">La Liga</string>
    <string name="PremierLeague">Premier League</string>
    <string name="Bundesliga">Bundesliga</string>

    <string name="its_jersey">Its Jersey</string>
    <string name="description">Description</string>
    <string name="foundation_year">Foundation Year</string>
    <string name="next_5_events">Next 5 Events</string>
    <string name="website">Website</string>
    <string name="social_networks">Social Networks</string>
    <string name="date_unknown">Date Unknown</string>
    <string name="team_name">Team Name</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="team_badge">Team Badge</string>

</resources>