<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="event_model"
            type="com.jorge_diaz.leagues.viewmodel.event.EventViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_header_team_detail"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_top_team_detail_header"
                    app:collapsedTitleGravity="center_horizontal"
                    app:layout_collapseMode="parallax"
                    app:titleEnabled="true">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_team_badge"
                            android:layout_width="@dimen/width_team_detail_image"
                            android:layout_height="@dimen/height_team_detail_image"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/team_name"
                            android:scaleType="fitCenter"
                            tools:src="@drawable/ic_bundesliga" />

                        <TextView
                            android:id="@+id/tv_team_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/berlin_sans_fb_regular"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:textColor="@color/gray_team_detail_title"
                            android:textSize="@dimen/text_size_team_detail_header_title"
                            tools:text="@string/team_name" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_team_jersey"
                            android:layout_width="@dimen/width_team_detail_image"
                            android:layout_height="@dimen/height_team_detail_image"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/its_jersey"
                            android:scaleType="fitCenter"
                            tools:src="@drawable/ic_bundesliga" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/berlin_sans_fb_regular"
                            android:text="@string/its_jersey"
                            android:textAlignment="center"
                            android:textColor="@color/gray_team_detail_title"
                            android:textSize="@dimen/text_size_team_detail_header_title" />
                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_team_name_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/berlin_sans_fb_regular"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_team_detail_header_subtitle"
                            tools:text="Team Name" />


                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_content_team_detail_container"
                android:paddingEnd="@dimen/padding_content_team_detail_container">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/berlin_sans_fb_regular"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="@color/blue_team_detail_subtitle"
                    android:textSize="@dimen/text_size_team_detail_title" />

                <com.abdulhakeem.seemoretextview.SeeMoreTextView
                    android:id="@+id/tv_expandable_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_content_team_detail"
                    android:fontFamily="@font/berlin_sans_fb_regular"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_content_team_detail" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_between_resources"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_between_resources"
                        android:fontFamily="@font/berlin_sans_fb_regular"
                        android:text="@string/foundation_year"
                        android:textAlignment="textStart"
                        android:textColor="@color/blue_team_detail_subtitle"
                        android:textSize="@dimen/text_size_team_detail_sub_subtitles" />

                    <TextView
                        android:id="@+id/tv_foundation_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_between_resources"
                        android:fontFamily="@font/berlin_sans_fb_regular"
                        android:paddingStart="@dimen/padding_content_team_detail_container"
                        android:paddingEnd="@dimen/padding_content_team_detail_container"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_content_team_detail"
                        tools:text="@string/description" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/width_dividing_line"
                    android:layout_height="@dimen/height_dividing_line"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_top_dividing_line"
                    android:layout_marginBottom="@dimen/margin_bottom_dividing_line"
                    android:background="@color/dividing_line" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/berlin_sans_fb_regular"
                    android:text="@string/next_5_events"
                    android:textAlignment="center"
                    android:textColor="@color/blue_team_detail_subtitle"
                    android:textSize="@dimen/text_size_team_detail_title" />

                <ListView
                    android:id="@+id/lv_events"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_events_list_view"
                    android:fadeScrollbars="false"
                    android:nestedScrollingEnabled="true"
                    app:setAdapter="@{event_model.listEventsAdapter}"
                    tools:listitem="@layout/list_item_event" />

                <View
                    android:layout_width="@dimen/width_dividing_line"
                    android:layout_height="@dimen/height_dividing_line"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_top_dividing_line"
                    android:layout_marginBottom="@dimen/margin_bottom_dividing_line"
                    android:background="@color/dividing_line" />

                <TextView
                    android:id="@+id/tv_website_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/berlin_sans_fb_regular"
                    android:text="@string/website"
                    android:textAlignment="center"
                    android:textColor="@color/blue_team_detail_subtitle"
                    android:textSize="@dimen/text_size_team_detail_title" />


                <TextView
                    android:id="@+id/tv_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_content_team_detail"
                    android:layout_marginBottom="@dimen/default_margin_between_resources"
                    android:autoLink="web"
                    android:fontFamily="@font/berlin_sans_fb_regular"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_content_team_detail"
                    tools:text="https://clubwebsite.com" />

                <TextView
                    android:id="@+id/tv_social_networks_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_between_resources"
                    android:fontFamily="@font/berlin_sans_fb_regular"
                    android:text="@string/social_networks"
                    android:textAlignment="center"
                    android:textColor="@color/blue_team_detail_subtitle"
                    android:textSize="@dimen/text_size_team_detail_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_social_networks_container"
                    android:layout_marginTop="@dimen/margin_top_content_team_detail"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_bottom_content_team_detail">

                    <ImageButton
                        android:id="@+id/ib_facebook"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_social_network_image"
                        android:layout_weight="1"
                        android:background="@null"
                        android:contentDescription="@string/facebook"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_facebook" />

                    <ImageButton
                        android:id="@+id/ib_instagram"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_social_network_image"
                        android:layout_weight="1"
                        android:background="@null"
                        android:contentDescription="@string/instagram"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_instagram" />

                    <ImageButton
                        android:id="@+id/ib_twitter"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_social_network_image"
                        android:layout_weight="1"
                        android:background="@null"
                        android:contentDescription="@string/twitter"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_twitter" />

                    <ImageButton
                        android:id="@+id/ib_youtube"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height_social_network_image"
                        android:layout_weight="1"
                        android:background="@null"
                        android:contentDescription="@string/youtube"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_youtube" />


                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>